# modelo_cnn_lstm

./: .gitignore  Makefile  PAPERSPACE.md  README.md  pyproject.toml  requirements.txt  run_pipeline.py
das2025_replication/: __init__.py  config.py  data_loading.py  evaluation.py  features.py  gan.py  models_deep.py  models_ml.py  paper_input.py  paper_preprocessing.py  preprocessing.py  riemannian.py  rois.py  run_experiments.py  visualization.py
docs/: PAPER_AUDIT_Das2025.md  THESIS_PROTOCOL.md
notebooks/: Das2025_Replication.ipynb
scripts/: check_gpu.sh  paperspace_run.sh  paperspace_setup.sh  venv_common.sh
