[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "modelo-cnn-lstm"
version = "1.0.0"
description = "Das et al. (2025) EEG motor imagery CNN-LSTM replication (TensorFlow)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[project.optional-dependencies]
ml = [
  "numpy>=1.24,<2",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "mne>=1.6",
  "PyWavelets>=1.5",
  "tensorflow>=2.15",
  "pyriemann>=0.5",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["das2025_replication*"]
